[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/gameOver.gd" type="Script" id=1]
[ext_resource path="res://sprites/main_menu/generic_button.png" type="Texture" id=2]

[node name="gameOver" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.368627 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBucksContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 442.0
margin_top = 221.0
margin_right = 582.0
margin_bottom = 379.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBucksContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Game over"
align = 1

[node name="Restart" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 62.0
text = "Restart"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Main menu" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 72.0
margin_right = 140.0
margin_bottom = 110.0
text = "Main menu"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[node name="Quit" type="Button" parent="CenterContainer/VBucksContainer"]
margin_top = 120.0
margin_right = 140.0
margin_bottom = 158.0
text = "Quit"
icon = ExtResource( 2 )
flat = true
icon_align = 1

[connection signal="pressed" from="CenterContainer/VBucksContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBucksContainer/Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBucksContainer/Quit" to="." method="_on_Quit_pressed"]
